--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -5,7 +5,7 @@ add_definitions(-DBOOST_TEST_DYN_LINK)
 if (NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
 
 set (TEST_PROPERTIES
-  "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento-media-server.conf"
+  "MEDIA_SERVER_CONF_FILE=${CMAKE_SOURCE_DIR}/kurento.conf.json"
   "SERVER_DIR=${CMAKE_CURRENT_BINARY_DIR}/../server/kurento-media-server"
   "BOOST_TEST_CATCH_SYSTEM_ERRORS=no"
 )
