Improve transport factory
Change-Id: I8a25bb28c709f89ab0031621a3ce471615db2dd1

--- a/server/transport/rabbitmq/CMakeLists.txt
+++ b/server/transport/rabbitmq/CMakeLists.txt
@@ -9,6 +9,8 @@ set (RABBIT_MQ_TRANSPORT_SOURCES
   RabbitMQEventHandler.hpp
   RabbitMQConnection.cpp
   RabbitMQConnection.hpp
+  RabbitMQTransportFactory.cpp
+  RabbitMQTransportFactory.hpp
 )
 
 add_library (rabbitMQTransport
