websocket: Manage event subscriptions
Change-Id: Ic49ce75ce305a214cacee0933ec34bd461b15fdc

--- a/server/transport/websocket/CMakeLists.txt
+++ b/server/transport/websocket/CMakeLists.txt
@@ -3,6 +3,8 @@ set (WEBSOCKET_SOURCES
   WebSocketTransport.hpp
   WebSocketTransportFactory.cpp
   WebSocketTransportFactory.hpp
+  WebSocketEventHandler.cpp
+  WebSocketEventHandler.hpp
 )
 
 set(FLAGS "-D_WEBSOCKETPP_CPP11_STL_ -pthread")
