Use exponential backoff algorithm to reconnect to RabbitMQ
Change-Id: Id11cbf34fa9c970c559b45fa9c58ccc8dec42e34

--- a/server/transport/rabbitmq/CMakeLists.txt
+++ b/server/transport/rabbitmq/CMakeLists.txt
@@ -11,6 +11,9 @@ set (RABBIT_MQ_TRANSPORT_SOURCES
   RabbitMQConnection.hpp
   RabbitMQTransportFactory.cpp
   RabbitMQTransportFactory.hpp
+  RabbitMQReconnectStrategy.hpp
+  ExponentialBackoffStrategy.cpp
+  ExponentialBackoffStrategy.hpp
 )
 
 add_library (rabbitMQTransport
