websocket: Add support for secure websockets
Change-Id: Ia06cca3a1293b6d1ac255014c72873109f30fd22

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,6 +32,7 @@ set(LIB_PREFIX "lib")
 find_package(PkgConfig)
 find_package (Boost COMPONENTS unit_test_framework)
 find_package(Boost COMPONENTS system filesystem REQUIRED)
+find_package(OpenSSL REQUIRED)
 
 pkg_check_modules(KMS_CORE REQUIRED kmscore>=5.0.0)
 pkg_check_modules(GLIBMM REQUIRED glibmm-2.4)
