Fix debian control
Change-Id: Ib2fafd09188b7be47c96c75b6ef2c1c02c3b1478

--- a/debian/control
+++ b/debian/control
@@ -13,7 +13,7 @@ Build-Depends:
  libthrift-dev (<= 0.9.1),
  libevent-dev,
  thrift-compiler,
- libssl-dev
+ libssl-dev,
  librabbitmq-dev
 Standards-Version: 3.9.4
 
