Use a library for common testing files
Change-Id: I732bad30229e7f487fdd4dbbe93e6c431969e542

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,14 @@ include (TestHelpers)
 
 add_definitions(-DBOOST_TEST_DYN_LINK -D_WEBSOCKETPP_CPP11_STL_ -pthread)
 
+add_library (base_test EXCLUDE_FROM_ALL BaseTest.cpp)
+set_property (TARGET base_test
+  PROPERTY
+    INCLUDE_DIRECTORIES
+      ${KMS_CORE_INCLUDE_DIRS}
+      ${CMAKE_SOURCE_DIR}/server/transport/websocket
+)
+
 if (NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
 
 set (TEST_PROPERTIES
@@ -10,10 +18,11 @@ set (TEST_PROPERTIES
   "BOOST_TEST_CATCH_SYSTEM_ERRORS=no"
 )
 
-add_test_program(test_server_json server_json_test.cpp BaseTest.cpp)
+add_test_program(test_server_json server_json_test.cpp)
 add_dependencies(test_server_json
   ALL
   kurento-media-server
+  base_test
 )
 target_link_libraries(test_server_json
   ${KMS_CORE_LIBRARIES}
@@ -21,21 +30,20 @@ target_link_libraries(test_server_json
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   -pthread
+  base_test
 )
 set_property (TARGET test_server_json
   PROPERTY
     INCLUDE_DIRECTORIES
       ${KMS_CORE_INCLUDE_DIRS}
-      ${CMAKE_SOURCE_DIR}/server/transport
       ${CMAKE_SOURCE_DIR}/server/transport/websocket
-      ${CMAKE_SOURCE_DIR}/server
-      ${THRIFT_INCLUDE_DIRS}
 )
 
-add_test_program(test_server_json_session BaseTest.cpp server_json_session.cpp)
+add_test_program(test_server_json_session server_json_session.cpp)
 add_dependencies(test_server_json_session
   ALL
   kurento-media-server
+  base_test
 )
 
 target_link_libraries(test_server_json_session
@@ -44,20 +52,20 @@ target_link_libraries(test_server_json_session
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   -pthread
+  base_test
 )
 set_property (TARGET test_server_json_session
   PROPERTY
     INCLUDE_DIRECTORIES
       ${KMS_CORE_INCLUDE_DIRS}
-      ${CMAKE_SOURCE_DIR}/server/transport
       ${CMAKE_SOURCE_DIR}/server/transport/websocket
-      ${CMAKE_SOURCE_DIR}/server/
 )
 
-add_test_program(test_server_duplicate_requests BaseTest.cpp server_duplicate_requests.cpp )
+add_test_program(test_server_duplicate_requests server_duplicate_requests.cpp )
 add_dependencies(test_server_duplicate_requests
   ALL
   kurento-media-server
+  base_test
 )
 target_link_libraries(test_server_duplicate_requests
   ${KMS_CORE_LIBRARIES}
@@ -65,13 +73,12 @@ target_link_libraries(test_server_duplicate_requests
   ${Boost_SYSTEM_LIBRARY}
   ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
   -pthread
+  base_test
 )
 set_property (TARGET test_server_duplicate_requests
   PROPERTY INCLUDE_DIRECTORIES
     ${KMS_CORE_INCLUDE_DIRS}
-    ${CMAKE_SOURCE_DIR}/server/transport
     ${CMAKE_SOURCE_DIR}/server/transport/websocket
-    ${CMAKE_SOURCE_DIR}/server/
 )
 
 endif(NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
