debian: Indicate that current package replaces old kurento package
Change-Id: Ibd03606c6930656005315e6fe04101d9a1a8d83c

--- a/debian/control
+++ b/debian/control
@@ -22,6 +22,7 @@ Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-elements,
  kms-core
+Replaces: kurento
 Description: Kurento Media Server
  The Kurento Media Server processes audio and video streams,
  doing composable pipeline-based processing or media.
