debian: configure a metapackage that installs kurento-media-server
This will be used to install also kurento-control-server when needed

Change-Id: Ife3ca0ee3b078b5ef1b41cb28f159452b0ec6f6c

--- a/debian/control
+++ b/debian/control
@@ -33,3 +33,10 @@ Depends: ${misc:Depends},
  kurento-media-server (= ${binary:Version}),
  kms-core-dbg
 Description: Debugging symbols for Kurento Media Server
+
+Package: kurento-server
+Architecture: any
+Depends:
+ kurento-media-server (= ${binary:Version})
+Description: Meta package for kurento server side
+ This packages install all required server programs for kurento
