debian: Force installation of kms-filters alongside mediaserver
Change-Id: I31d6f1193b5a7b74634df49d1e35f50838bc735d

--- a/debian/control
+++ b/debian/control
@@ -21,6 +21,7 @@ Package: kurento-media-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-elements,
+ kms-filters,
  kms-core
 Replaces: kurento
 Description: Kurento Media Server
