debian: Force conflicts with old kurento package
Change-Id: Ie0dbb1adc56a7d5ec0afa2d05081901387385591

--- a/debian/control
+++ b/debian/control
@@ -24,6 +24,8 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-filters,
  kms-core
 Replaces: kurento
+Breaks: kurento
+Conflicts: kurento
 Description: Kurento Media Server
  The Kurento Media Server processes audio and video streams,
  doing composable pipeline-based processing or media.
