Add config.h.cmake file to modules generated by scaffold
Change-Id: Ieea16cc6e70816189531bf1e635ca9bdcf35a923

--- a/scaffold/CMakeLists.txt
+++ b/scaffold/CMakeLists.txt
@@ -11,6 +11,7 @@ set(SCAFFOLD_TEMPLATES
   gstplugin.cpp.template
   gstplugin.h.template
   plugin.c.template
+  config.h.cmake.template
 )
 
 install(FILES ${SCAFFOLD_TEMPLATES} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CUSTOM_PREFIX}/scaffold/)
