Add debian package generation in modules generated by scaffold
Change-Id: Ib5683844c0da89fc951eb40cf9e1d37e0012bd94

--- a/scaffold/CMakeLists.txt
+++ b/scaffold/CMakeLists.txt
@@ -11,7 +11,13 @@ set(SCAFFOLD_TEMPLATES
   gstplugin.cpp.template
   gstplugin.h.template
   plugin.c.template
+  control.template
+  name.install.template
+  name.install.OpenCV.template
+  rules.template
+  changelog.template
   config.h.cmake.template
+  name-dev.install.template
 )
 
 install(FILES ${SCAFFOLD_TEMPLATES} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CUSTOM_PREFIX}/scaffold/)
