Add libevent that is required for rabbitmq and was removed with thrift
Change-Id: Ib90962e743a4bd1c08cdf121d179848bb253a499

--- a/debian/control
+++ b/debian/control
@@ -9,6 +9,7 @@ Build-Depends:
  libboost-dev,
  libboost-system-dev,
  libboost-filesystem-dev,
+ libevent-dev,
  libssl-dev,
  librabbitmq-dev
 Standards-Version: 3.9.4
