Update modules dependencies to 5.0.1
Change-Id: Ic26c4068c77e99e85712f8ef935265d8b47339c7

--- a/debian/control
+++ b/debian/control
@@ -5,7 +5,7 @@ Maintainer: Kurento Maintenance Team <kurento@googlegroups.com>
 Build-Depends:
  cmake,
  debhelper (>= 7.0.50),
- kms-core-dev,
+ kms-core-dev (>= 5.0.1),
  libboost-dev,
  libboost-system-dev,
  libboost-filesystem-dev,
@@ -17,9 +17,9 @@ Standards-Version: 3.9.4
 Package: kurento-media-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
- kms-elements,
- kms-filters,
- kms-core
+ kms-elements (>= 5.0.1),
+ kms-filters (>= 5.0.1),
+ kms-core (>= 5.0.1)
 Replaces: kurento
 Breaks: kurento
 Conflicts: kurento
