kurento-module-scaffold: Change kurento-client-version in kmd template
Change-Id: Iacbfde9840d20b93ccf5c66a6f36a9cce9ef5b79

--- a/scaffold/filter.kmd.json.template
+++ b/scaffold/filter.kmd.json.template
@@ -1,11 +1,5 @@
 {
   "name": "${name}",
   "version": "0.0.1-dev",
-  "kurentoVersion": "5.0.0-dev",
-  "imports": [
-    {
-      "name":"filters",
-      "version": "5.0.0-dev"
-    }
-  ]
+  "kurentoVersion": "^5.0.0"
 }
