Base log system on boost
Change-Id: I442c2cb7039aef3d22c1e274e277c4c8b2562561

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -30,8 +30,8 @@ set(INCLUDE_PREFIX "include/${CUSTOM_PREFIX}")
 set(LIB_PREFIX "lib")
 
 find_package(PkgConfig)
-find_package (Boost COMPONENTS unit_test_framework)
-find_package(Boost COMPONENTS system filesystem REQUIRED)
+find_package(Boost COMPONENTS unit_test_framework)
+find_package(Boost COMPONENTS system filesystem log REQUIRED)
 find_package(OpenSSL REQUIRED)
 
 pkg_check_modules(KMS_CORE REQUIRED kmscore>=5.0.0)
