main: Use boost program options parser instead of Glibmm
Change-Id: I14a8a97c6e89c1fa73227ea8db408a4ebfd3fa12

--- a/debian/control
+++ b/debian/control
@@ -10,6 +10,7 @@ Build-Depends:
  libboost-system-dev,
  libboost-filesystem-dev,
  libboost-log-dev,
+ libboost-program-options-dev,
  libevent-dev,
  libssl-dev,
  librabbitmq-dev
