Use boost program_options to configure modules path
It can be defined as an environment variable or as a command line option

Change-Id: Id2c05ce0da6058f6e96ef2442a1fcd2dbfc03c16

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -10,6 +10,8 @@ SET(KMSC_SOURCE
   CacheEntry.hpp
   logging.cpp
   logging.hpp
+  modules.cpp
+  modules.hpp
 )
 
 add_definitions(-DBOOST_LOG_DYN_LINK)
