Hack to avoid problems while loading modules with different versions if gnutls
Hack is explained on a source comment more clearly

Change-Id: Ia02c6e144520be3dc5b447ff54c3bf963c179944

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,8 @@ pkg_check_modules(GSTREAMER_SDP REQUIRED gstreamer-sdp-1.0>=1.3.3)
 pkg_check_modules(EVENT REQUIRED libevent>=2.0.16-stable)
 pkg_check_modules(RABBITMQ REQUIRED librabbitmq>=0.4.1)
 
+pkg_check_modules(GNUTLS REQUIRED gnutls>=3.2.11)
+
 add_subdirectory(server)
 
 enable_testing()
