--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends:
  libboost-log-dev,
  libboost-program-options-dev,
  libevent-dev,
+ libgnutls28-dev,
  libssl-dev,
  librabbitmq-dev
 Standards-Version: 3.9.4
