kurento-module-scaffold: Add Gruntfile.js to module generation
Change-Id: Id9e061133cbb329def0e2ef63e9d34da3c052ae0

--- a/scaffold/CMakeLists.txt
+++ b/scaffold/CMakeLists.txt
@@ -18,6 +18,7 @@ set(SCAFFOLD_TEMPLATES
   changelog.template
   config.h.cmake.template
   name-dev.install.template
+  Gruntfile.js.template
 )
 
 install(FILES ${SCAFFOLD_TEMPLATES} DESTINATION ${CMAKE_INSTALL_DATAROOTDIR}/${CUSTOM_PREFIX}/scaffold/)
