--- a/debian/control
+++ b/debian/control
@@ -6,7 +6,7 @@ Build-Depends:
  cmake,
  debhelper (>= 7.0.50),
  kms-core-dev (>= 5.1.0~58),
- kms-jsonrpc-dev (>= 0.2.0),
+ kms-jsonrpc-dev (>= 0.2.0~1),
  libboost-dev,
  libboost-system-dev,
  libboost-filesystem-dev,
@@ -24,7 +24,7 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-elements (>= 5.0.4),
  kms-filters (>= 5.0.4),
  kms-core (>= 5.1.0~58),
- kms-jsonrpc (>= 0.2.0)
+ kms-jsonrpc (>= 0.2.0~1)
 Replaces: kurento
 Breaks: kurento
 Conflicts: kurento
