--- a/debian/control
+++ b/debian/control
@@ -12,6 +12,7 @@ Build-Depends:
  libboost-filesystem-dev,
  libboost-log-dev,
  libboost-program-options-dev,
+ libboost-test-dev,
  libevent-dev,
  libgnutls28-dev,
  libssl-dev,
