Reenable tests that were disabled by boost dependencies changes
Change-Id: I460e4964b8e92ec80d85a9c34ecaf674c8aae10c

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -11,10 +11,7 @@ set_property (TARGET base_test
 )
 
 target_link_libraries(base_test
-  ${Boost_LIBRARY}
-  ${Boost_SYSTEM_LIBRARY}
-  ${Boost_FILESYSTEM_LIBRARY}
-  ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY}
+  ${Boost_LIBRARIES}
 )
 
 if (NOT DEFINED DISABLE_NETWORK_TESTS OR NOT ${DISABLE_NETWORK_TESTS})
