--- a/scaffold/plugin.c.template
+++ b/scaffold/plugin.c.template
@@ -1,7 +1,7 @@
 #include <config.h>
 #include <gst/gst.h>
 
-#include "gts${name}.h"
+#include "gst${name}.h"
 
 static gboolean
 init (GstPlugin * plugin)
