Add registrar to websocket
If enabled opens a connection with the registrar and informs about how
to connect to current mediaserver.

When the connection to the registrar closes, tries to register again.

Change-Id: Id915af5d83611ec1bcbc344c552fad9db9cacd1f

--- a/server/transport/websocket/CMakeLists.txt
+++ b/server/transport/websocket/CMakeLists.txt
@@ -5,6 +5,8 @@ set (WEBSOCKET_SOURCES
   WebSocketTransportFactory.hpp
   WebSocketEventHandler.cpp
   WebSocketEventHandler.hpp
+  WebSocketRegistrar.cpp
+  WebSocketRegistrar.hpp
 )
 
 set(FLAGS "-D_WEBSOCKETPP_CPP11_STL_ -pthread")
