--- a/scaffold/gstplugin.h.template
+++ b/scaffold/gstplugin.h.template
@@ -4,7 +4,7 @@
 #include <gst/video/gstvideofilter.h>
 
 G_BEGIN_DECLS
-#define GST_TYPE_${nameUnderscoreUpper}   (kms_${nameUndersScoreLower}_get_type())
+#define GST_TYPE_${nameUnderscoreUpper}   (gst_${nameUndersScoreLower}_get_type())
 #define GST_${nameUnderscoreUpper}(obj)   (G_TYPE_CHECK_INSTANCE_CAST((obj),GST_TYPE_${nameUnderscoreUpper},Gst${camelName}))
 #define GST_${nameUnderscoreUpper}_CLASS(klass)   (G_TYPE_CHECK_CLASS_CAST((klass),GST_TYPE_${nameUnderscoreUpper},Gst${camelName}Class))
 #define GST_IS_${nameUnderscoreUpper}(obj)   (G_TYPE_CHECK_INSTANCE_TYPE((obj),GST_TYPE_${nameUnderscoreUpper}))
@@ -24,9 +24,9 @@ struct _Gst${camelName}Class
   GstVideoFilterClass base_${nameUndersScoreLower}_class;
 };
 
-GType kms_${nameUndersScoreLower}_get_type (void);
+GType gst_${nameUndersScoreLower}_get_type (void);
 
-gboolean kms_${nameUndersScoreLower}_plugin_init (GstPlugin * plugin);
+gboolean gst_${nameUndersScoreLower}_plugin_init (GstPlugin * plugin);
 
 G_END_DECLS
 #endif /* _GST_${nameUnderscoreUpper}_H_ */
