Add build dependencies to make test work properly
Change-Id: Iadd10705e032ff552d72f26deddb6a2b97f4ef30

--- a/debian/control
+++ b/debian/control
@@ -6,6 +6,8 @@ Build-Depends:
  cmake,
  debhelper (>= 7.0.50),
  kms-core-dev (>= 5.1.0),
+ kms-elements-dev,
+ kms-filters-dev,
  kms-jsonrpc-dev (>= 0.2.0),
  libboost-dev,
  libboost-system-dev,
