--- a/debian/rules
+++ b/debian/rules
@@ -10,4 +10,4 @@ override_dh_auto_configure:
 .PHONY: override_dh_strip
 
 override_dh_strip:
-	dh_strip --dbg-package=kurento-media-server-dbg
+	dh_strip --dbg-package=kurento-media-server-6.0-dbg
