debian/control: Missing commas
Change-Id: Icc593dcec0aea205b73763f8847ee367eec8b9ea

--- a/debian/control
+++ b/debian/control
@@ -28,10 +28,10 @@ Depends: ${shlibs:Depends}, ${misc:Depends},
  kms-core-6.0,
  kms-jsonrpc (>= 0.2.0)
 Replaces:
- kurento
+ kurento,
  kurento-media-server
 Breaks:
- kurento
+ kurento,
  kurento-media-server
 Conflicts: kurento
 Description: Kurento Media Server
