--- a/debian/control
+++ b/debian/control
@@ -14,6 +14,8 @@ Build-Depends:
  libboost-filesystem-dev,
  libboost-program-options-dev,
  libboost-test-dev,
+ libboost-thread-dev,
+ libboost-log-dev,
  libevent-dev,
  libgnutls28-dev,
  libssl-dev,
