--- a/debian/control
+++ b/debian/control
@@ -4,6 +4,7 @@ Priority: optional
 Maintainer: Kurento Maintenance Team <kurento@googlegroups.com>
 Build-Depends:
  cmake,
+ libglib2.0-dev (>= 2.42),
  debhelper (>= 7.0.50),
  kms-core-dev (>= 5.1.0),
  kms-elements-dev,
@@ -23,6 +24,7 @@ Standards-Version: 3.9.4
 Package: kurento-media-server
 Architecture: any
 Depends: ${shlibs:Depends}, ${misc:Depends},
+ libglib2.0-0 (>= 2.42),
  kms-elements (>= 5.1.0),
  kms-filters (>= 5.1.0),
  kms-core (>= 5.1.0),
