Add ResourceManager to limit the number of active threads
By now default number of threads is static, but in the future should
be dynamic depending on kernel limits.

Additionally memory should also be controlled to avoid running out of
memory.

Change-Id: Icb58314a3e9466b5ddd50d930e21e74902ff30a7

--- a/server/CMakeLists.txt
+++ b/server/CMakeLists.txt
@@ -4,6 +4,8 @@ SET(KMSC_SOURCE
   version.hpp
   ServerMethods.cpp
   ServerMethods.hpp
+  ResourceManager.cpp
+  ResourceManager.hpp
   RequestCache.cpp
   RequestCache.hpp
   CacheEntry.cpp
